<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Parameter_activity"
    android:id="@+id/RL_param">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="684dp"
        android:text="@string/couleur_du_fond_d_cran"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="458dp"
        android:text="@string/choix_de_la_devise"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TV_AnnuelMensuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="323dp"
        android:text="Par ans ou mois ?"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/RG_Fond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="563dp">

        <RadioButton
            android:id="@+id/RB_Bleu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButtonColor"
            android:text="@string/bleu" />

        <RadioButton
            android:id="@+id/RB_Gris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButtonColor"
            android:text="@string/gris" />

        <RadioButton
            android:id="@+id/RB_Vert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButtonColor"
            android:text="@string/vert" />
    </RadioGroup>


    <Button
        android:id="@+id/BTN_Enregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="143dp"
        android:layout_marginBottom="169dp"
        android:text="@string/enregistrer" />

    <Button
        android:id="@+id/BTN_retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="306dp"
        android:layout_marginRight="306dp"
        android:layout_marginBottom="13dp"
        android:text="@string/retour" />

    <EditText
        android:id="@+id/TV_devise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="377dp"
        android:ems="10"
        android:hint="@string/votre_devise"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/RG_AnsMois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="146dp"
        android:layout_marginBottom="240dp">

        <RadioButton
            android:id="@+id/RB_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButtonYearMonth"
            android:text="@string/Ans" />

        <RadioButton
            android:id="@+id/RB_Mois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButtonYearMonth"
            android:text="@string/Mois" />


    </RadioGroup>


</RelativeLayout>